talos/snowflake/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: snowflake
  namespace: snowflake
  labels:
    app.kubernetes.io/name: snowflake
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: snowflake
  ports:
    - name: metrics
      port: 9999
      targetPort: metrics
      protocol: TCP
    - name: tor-metrics
      port: 9035
      targetPort: tor-metrics
      protocol: TCP
    - name: conduit-metrics
      port: 9090
      targetPort: conduit-metrics
      protocol: TCP
